@@ -122,6 +122,7 @@ Version SVN trunk (?)
       engine, which could lead to RT instability or even worse).
     - ScriptVM: Implemented automatic suspension of RT safety
       threatening scripts.
+    - Provide more user friendly error messages on syntax errors.
 
 Version 2.0.0 (15 July 2015)
 
